kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels: 
    app: web
spec:
  containers:
  - name: web
    image: dimapl/nginx-alpine:1.0
    readinessProbe:
      httpGet:
        path: /index.html
        port: 80
    livenessProbe:
      tcpSocket: { port: 8000 }
    volumeMounts:
    - name: app
      mountPath: /app
  volumes:
  - name: app
    emptyDir: {}
